[package]
name = "mssqlxl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tiberius = { version = "0.12.2", features = ["time", "chrono", "tds73"] }
tiberius-derive = "0.0.2"
tiberius-mappers = "0.6.0"
tiberius-mappers-derive = "0.6.0"
clap = "4.5.21"
tokio-util = { version = "0.7.12", features = ["compat"] }
anyhow = "1.0.93"
rust_xlsxwriter = { version = "0.79.4", features = ["chrono"] }
futures = "0.3.31"

